...
          (_selectedIndex == 0) ? 'Movie' : 'Tv Series',
          style: TextStyle(fontWeight: FontWeight.bold),
        ),
        leading: Builder(
          builder: (context) {
            return IconButton(
              key: const Key('drawerButton'),
              icon: const Icon(Icons.menu),
              onPressed: () {
                Scaffold.of(context).openDrawer();
              },
            );
          },
...
              onTap: () {
                _onItemTapped(0);
                Navigator.pop(context);
              },
            ),
            ListTile(
              key: const Key('menu-tv-series'),
              leading: Icon(Icons.tv_rounded),
              title: Text('Tv Series'),
              onTap: () {
                _onItemTapped(1);
                Navigator.pop(context);
              },
...
