...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        centerTitle: true,
        title: Text('Watchlist Movie'),
        leading: IconButton(
          key: const Key('iconBack-movie'),
          icon: Icon(Icons.arrow_back),
          // coverage:ignore-start
          onPressed: () {
            Navigator.pop(context);
          },
          // coverage:ignore-end
...
